# whatsexpense

./: .gitignore  README.md
api/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml  fly-dev.toml  fly.toml
api/config/: default.toml
api/src/: main.rs  settings.rs
api/src/api/: mod.rs  router.rs  state.rs
api/src/api/asset/: asset_controller.rs  asset_router.rs  mod.rs
api/src/api/auth/: auth_controller.rs  auth_model.rs  auth_router.rs  auth_service.rs  mod.rs
api/src/api/budget/: budget_model.rs  mod.rs
api/src/api/category/: category_controller.rs  category_model.rs  category_router.rs  category_service.rs  mod.rs
api/src/api/exchange_rate/: exchange_rate_controller.rs  exchange_rate_entity.rs  exchange_rate_model.rs  exchange_rate_repo.rs  exchange_rate_router.rs  exchange_rate_service.rs  mod.rs
api/src/api/identity/: identity_entity.rs  identity_model.rs  identity_repo.rs  identity_service.rs  mod.rs
api/src/api/infer/: infer_model.rs  infer_service.rs  mod.rs
api/src/api/invoice/: invoice_controller.rs  invoice_entity.rs  invoice_model.rs  invoice_repo.rs  invoice_router.rs  invoice_service.rs  mod.rs
api/src/api/message/: message_controller.rs  message_entity.rs  message_model.rs  message_repo.rs  message_router.rs  message_service.rs  mod.rs
api/src/api/report/: mod.rs  report_controller.rs  report_repo.rs  report_router.rs  report_service.rs
api/src/api/transaction/: mod.rs  transaction_controller.rs  transaction_entity.rs  transaction_model.rs  transaction_repo.rs  transaction_router.rs  transaction_service.rs
api/src/api/user/: mod.rs  user_controller.rs  user_entity.rs  user_model.rs  user_repo.rs  (+2 more)
api/src/common/: errors.rs  mod.rs
api/src/macros/: mod.rs
api/src/mw/: authorization_nw.rs  mod.rs  user_info_nw.rs
api/src/services/: mod.rs
(+124 files in other folders)
