[package]
name = "whatsexpense-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.17", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["timeout", "trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
mongodb = "3.0"
bson = { version = "2.11", features = ["chrono-0_4", "serde_with"] }
async-graphql-axum = "7.0"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
jsonwebtoken = "9.3"
bcrypt = "0.15"
dotenv = "0.15"
async-openai = "0.23.4"
chronoutil = "0.2.7"
regex = "1.10.5"
itertools = "0.13"
serde_with = { version = "1.3", features = ["chrono"] }
base64 = "0.22"
redis = { version = "0.26", features = ["tokio-comp"] }
redis-macros = "0.4"
futures = "0.3"
tokio-util = "0.7"
uuid = { version = "1.10", features = ["v4", "fast-rng", "macro-diagnostics"] }
rust-s3 = "0.34"
gcloud-sdk = { version = "0.25", features = ["google-cloud-vision-v1p4beta1"] }
gcp_auth = "0.12"
mime2ext = "0.1.52"
utoipa = { version = "5.0.0-alpha.0", features = ["axum_extras", "chrono", "openapi_extensions"] }
utoipa-scalar = { version = "0.2.0-alpha.0", features = ["axum"] }
nanoid = "0.4"
google-oauth = "1.11"
strum = { version = "0.26", features = ["derive"] }
serde_repr = "0.1.19"
validator = { version = "0.18.1", features = ["derive"] }
axum-valid = "0.19.0"
